added json converter
