# Nima.SKS.Package.Services.DTOs/Models/Recipient.cs
@@ -3,7 +3,7 @@
  *
  * No description provided (generated by Swagger Codegen https://github.com/swagger-api/swagger-codegen)
  *
- * OpenAPI spec version: 1.20.0
+ * OpenAPI spec version: 1.20.1
  * 
  * Generated by: https://github.com/swagger-api/swagger-codegen.git
  */
@@ -24,7 +24,7 @@ namespace Nima.SKS.Package.Services.Models
     /// 
     /// </summary>
     [DataContract]
-    public partial class Receipient 
+    public partial class Recipient 
     { 
         /// <summary>
         /// Name of person or company.
@@ -78,7 +78,7 @@ namespace Nima.SKS.Package.Services.Models
         public override string ToString()
         {
             var sb = new StringBuilder();
-            sb.Append("class Receipient {\n");
+            sb.Append("class Recipient {\n");
             sb.Append("  Name: ").Append(Name).Append("\n");
             sb.Append("  Street: ").Append(Street).Append("\n");
             sb.Append("  PostalCode: ").Append(PostalCode).Append("\n");
@@ -106,15 +106,15 @@ namespace Nima.SKS.Package.Services.Models
         {
             if (ReferenceEquals(null, obj)) return false;
             if (ReferenceEquals(this, obj)) return true;
-            return obj.GetType() == GetType() && Equals((Receipient)obj);
+            return obj.GetType() == GetType() && Equals((Recipient)obj);
         }
 
         /// <summary>
-        /// Returns true if Receipient instances are equal
+        /// Returns true if Recipient instances are equal
         /// </summary>
-        /// <param name="other">Instance of Receipient to be compared</param>
+        /// <param name="other">Instance of Recipient to be compared</param>
         /// <returns>Boolean</returns>
-        public bool Equals(Receipient other)
+        public bool Equals(Recipient other)
         {
             if (ReferenceEquals(null, other)) return false;
             if (ReferenceEquals(this, other)) return true;
@@ -174,12 +174,12 @@ namespace Nima.SKS.Package.Services.Models
         #region Operators
         #pragma warning disable 1591
 
-        public static bool operator ==(Receipient left, Receipient right)
+        public static bool operator ==(Recipient left, Recipient right)
         {
             return Equals(left, right);
         }
 
-        public static bool operator !=(Receipient left, Receipient right)
+        public static bool operator !=(Recipient left, Recipient right)
         {
             return !Equals(left, right);
         }
