# Nima.SKS.Package.Services/Controllers/StaffApi.cs
@@ -3,7 +3,7 @@
  *
  * No description provided (generated by Swagger Codegen https://github.com/swagger-api/swagger-codegen)
  *
- * OpenAPI spec version: 1.20.0
+ * OpenAPI spec version: 1.20.1
  * 
  * Generated by: https://github.com/swagger-api/swagger-codegen.git
  */
@@ -28,29 +28,6 @@ namespace Nima.SKS.Package.Services.Controllers
     public class StaffApiController : ControllerBase
     { 
         /// <summary>
-        /// Report that a Parcel has been arrived at a certain Hop either warehouse or truck. 
-        /// </summary>
-        /// <param name="trackingId">The tracking ID of the parcel. E.g. PYJRB4HZ6 </param>
-        /// <param name="code"></param>
-        /// <response code="200">Successfully reported hop.</response>
-        /// <response code="500">An Error occurred.</response>
-        [HttpPost]
-        [Route("/parcel/{trackingId}/reportHop/{code}")]
-        [ValidateModelState]
-        [SwaggerOperation("ReportHop")]
-        [SwaggerResponse(statusCode: 500, type: typeof(Error), description: "An Error occurred.")]
-        public virtual IActionResult ReportHop([FromRoute][Required][RegularExpression("/^[A-Z0-9]{9}$/")]string trackingId, [FromRoute][Required]string code)
-        { 
-            //TODO: Uncomment the next line to return response 200 or use other options such as return this.NotFound(), return this.BadRequest(..), ...
-            // return StatusCode(200);
-
-            //TODO: Uncomment the next line to return response 500 or use other options such as return this.NotFound(), return this.BadRequest(..), ...
-            // return StatusCode(500, default(Error));
-
-            throw new NotImplementedException();
-        }
-
-        /// <summary>
         /// Report that a Parcel has been delivered at it&#x27;s final destination address. 
         /// </summary>
         /// <param name="trackingId">The tracking ID of the parcel. E.g. PYJRB4HZ6 </param>
@@ -63,6 +40,33 @@ namespace Nima.SKS.Package.Services.Controllers
         [SwaggerOperation("ReportParcelDelivery")]
         [SwaggerResponse(statusCode: 400, type: typeof(Error), description: "The operation failed due to an error.")]
         public virtual IActionResult ReportParcelDelivery([FromRoute][Required][RegularExpression("/^[A-Z0-9]{9}$/")]string trackingId)
+        { 
+            //TODO: Uncomment the next line to return response 200 or use other options such as return this.NotFound(), return this.BadRequest(..), ...
+            // return StatusCode(200);
+
+            //TODO: Uncomment the next line to return response 400 or use other options such as return this.NotFound(), return this.BadRequest(..), ...
+            // return StatusCode(400, default(Error));
+
+            //TODO: Uncomment the next line to return response 404 or use other options such as return this.NotFound(), return this.BadRequest(..), ...
+            // return StatusCode(404);
+
+            throw new NotImplementedException();
+        }
+
+        /// <summary>
+        /// Report that a Parcel has arrived at a certain hop either Warehouse or Truck. 
+        /// </summary>
+        /// <param name="trackingId">The tracking ID of the parcel. E.g. PYJRB4HZ6 </param>
+        /// <param name="code">The Code of the hop (Warehouse or Truck).</param>
+        /// <response code="200">Successfully reported hop.</response>
+        /// <response code="400">The operation failed due to an error.</response>
+        /// <response code="404">Parcel does not exist with this tracking ID or hop with code not found. </response>
+        [HttpPost]
+        [Route("/parcel/{trackingId}/reportHop/{code}")]
+        [ValidateModelState]
+        [SwaggerOperation("ReportParcelHop")]
+        [SwaggerResponse(statusCode: 400, type: typeof(Error), description: "The operation failed due to an error.")]
+        public virtual IActionResult ReportParcelHop([FromRoute][Required][RegularExpression("/^[A-Z0-9]{9}$/")]string trackingId, [FromRoute][Required][RegularExpression("/^[A-Z]{4}\\d{1,4}$/")]string code)
         { 
             //TODO: Uncomment the next line to return response 200 or use other options such as return this.NotFound(), return this.BadRequest(..), ...
             // return StatusCode(200);
