# Nima.SKS.Package.Services/wwwroot/swagger-original.json
@@ -6,7 +6,7 @@
       "name" : "SKS",
       "url" : "http://www.technikum-wien.at/"
     },
-    "version" : "1.20.0"
+    "version" : "1.20.1"
   },
   "servers" : [ {
     "url" : "/"
@@ -15,7 +15,7 @@
     "name" : "sender",
     "description" : "Operations for the sender of a parcel."
   }, {
-    "name" : "receipient",
+    "name" : "recipient",
     "description" : "Operations for the receiver of a parcel."
   }, {
     "name" : "warehouse-management",
@@ -44,7 +44,7 @@
           "required" : true
         },
         "responses" : {
-          "200" : {
+          "201" : {
             "description" : "Successfully submitted the new parcel",
             "content" : {
               "application/json" : {
@@ -69,7 +69,7 @@
     },
     "/parcel/{trackingId}" : {
       "get" : {
-        "tags" : [ "receipient" ],
+        "tags" : [ "recipient" ],
         "summary" : "Find the latest state of a parcel by its tracking ID.\n",
         "operationId" : "trackParcel",
         "parameters" : [ {
@@ -161,6 +161,54 @@
         }
       }
     },
+    "/parcel/{trackingId}/reportHop/{code}" : {
+      "post" : {
+        "tags" : [ "staff" ],
+        "summary" : "Report that a Parcel has arrived at a certain hop either Warehouse or Truck.\n",
+        "operationId" : "reportParcelHop",
+        "parameters" : [ {
+          "name" : "trackingId",
+          "in" : "path",
+          "description" : "The tracking ID of the parcel.\nE.g. PYJRB4HZ6\n",
+          "required" : true,
+          "style" : "simple",
+          "explode" : false,
+          "schema" : {
+            "pattern" : "^[A-Z0-9]{9}$",
+            "type" : "string"
+          }
+        }, {
+          "name" : "code",
+          "in" : "path",
+          "description" : "The Code of the hop (Warehouse or Truck).",
+          "required" : true,
+          "style" : "simple",
+          "explode" : false,
+          "schema" : {
+            "pattern" : "^[A-Z]{4}\\d{1,4}$",
+            "type" : "string"
+          }
+        } ],
+        "responses" : {
+          "200" : {
+            "description" : "Successfully reported hop."
+          },
+          "400" : {
+            "description" : "The operation failed due to an error.",
+            "content" : {
+              "application/json" : {
+                "schema" : {
+                  "$ref" : "#/components/schemas/error"
+                }
+              }
+            }
+          },
+          "404" : {
+            "description" : "Parcel does not exist with this tracking ID or hop with code not found.\n"
+          }
+        }
+      }
+    },
     "/parcel/{trackingId}/reportDelivery/" : {
       "post" : {
         "tags" : [ "staff" ],
@@ -196,50 +244,6 @@
           "404" : {
             "description" : "Parcel does not exist with this tracking ID.\n",
             "content" : { }
-          }
-        }
-      }
-    },
-    "/parcel/{trackingId}/reportHop/{code}" : {
-      "post" : {
-        "tags" : [ "staff" ],
-        "summary" : "Report that a Parcel has been arrived at a certain Hop either warehouse or truck.\n",
-        "operationId" : "reportHop",
-        "parameters" : [ {
-          "name" : "trackingId",
-          "in" : "path",
-          "description" : "The tracking ID of the parcel.\nE.g. PYJRB4HZ6\n",
-          "required" : true,
-          "style" : "simple",
-          "explode" : false,
-          "schema" : {
-            "pattern" : "^[A-Z0-9]{9}$",
-            "type" : "string"
-          }
-        }, {
-          "name" : "code",
-          "in" : "path",
-          "required" : true,
-          "style" : "simple",
-          "explode" : false,
-          "schema" : {
-            "type" : "string"
-          }
-        } ],
-        "responses" : {
-          "200" : {
-            "description" : "Successfully reported hop.",
-            "content" : { }
-          },
-          "500" : {
-            "description" : "An Error occurred.",
-            "content" : {
-              "application/json" : {
-                "schema" : {
-                  "$ref" : "#/components/schemas/error"
-                }
-              }
-            }
           }
         }
       }
@@ -349,164 +353,28 @@
           }
         }
       }
-    },
-    "/parcel/{trackingId}/webhooks" : {
-      "get" : {
-        "tags" : [ "parcelWebhook" ],
-        "description" : "Gets all registered subscriptions for the parcel webhook.",
-        "operationId" : "ApiParcelByTrackingIdWebhooksGet",
-        "parameters" : [ {
-          "name" : "trackingId",
-          "in" : "path",
-          "required" : true,
-          "style" : "simple",
-          "explode" : false,
-          "schema" : {
-            "pattern" : "^[A-Z0-9]{9}$",
-            "type" : "string"
-          }
-        } ],
-        "responses" : {
-          "200" : {
-            "description" : "List of webooks for the `trackingId`",
-            "content" : {
-              "*/*" : {
-                "schema" : {
-                  "$ref" : "#/components/schemas/webhookResponses"
-                }
-              }
-            }
-          },
-          "404" : {
-            "description" : "No parcel found with that tracking ID.",
-            "content" : { }
-          }
-        }
-      },
-      "post" : {
-        "tags" : [ "parcelWebhook" ],
-        "description" : "Subscribes to a webhook notification for the specific parcel.",
-        "operationId" : "ApiParcelByTrackingIdWebhooksPost",
-        "parameters" : [ {
-          "name" : "trackingId",
-          "in" : "path",
-          "required" : true,
-          "style" : "simple",
-          "explode" : false,
-          "schema" : {
-            "pattern" : "^[A-Z0-9]{9}$",
-            "type" : "string"
-          }
-        }, {
-          "name" : "url",
-          "in" : "query",
-          "required" : true,
-          "style" : "form",
-          "explode" : true,
-          "schema" : {
-            "type" : "string"
-          }
-        } ],
-        "responses" : {
-          "200" : {
-            "description" : "Successful response",
-            "content" : {
-              "text/plain" : {
-                "schema" : {
-                  "$ref" : "#/components/schemas/webhookResponse"
-                }
-              },
-              "application/json" : {
-                "schema" : {
-                  "$ref" : "#/components/schemas/webhookResponse"
-                }
-              },
-              "text/json" : {
-                "schema" : {
-                  "$ref" : "#/components/schemas/webhookResponse"
-                }
-              }
-            }
-          },
-          "404" : {
-            "description" : "No parcel found with that tracking ID.",
-            "content" : { }
-          }
-        },
-        "callbacks" : {
-          "myevent" : {
-            "{$request.query.url}?trackingId={$request.path.trackingId}" : {
-              "post" : {
-                "requestBody" : {
-                  "content" : {
-                    "application/json" : {
-                      "schema" : {
-                        "$ref" : "#/components/schemas/webhookMessage"
-                      }
-                    }
-                  }
-                },
-                "responses" : {
-                  "200" : {
-                    "description" : "OK",
-                    "content" : { }
-                  }
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/parcel/webhooks/{id}" : {
-      "delete" : {
-        "tags" : [ "parcelWebhook" ],
-        "description" : "Removes an existing webhook subscription.",
-        "operationId" : "ApiParcelWebhooksByIdDelete",
-        "parameters" : [ {
-          "name" : "id",
-          "in" : "path",
-          "required" : true,
-          "style" : "simple",
-          "explode" : false,
-          "schema" : {
-            "type" : "integer",
-            "format" : "int64"
-          }
-        } ],
-        "responses" : {
-          "200" : {
-            "description" : "Success",
-            "content" : { }
-          },
-          "404" : {
-            "description" : "Subscription does not exist.",
-            "content" : { }
-          }
-        }
-      }
     }
   },
   "components" : {
     "schemas" : {
       "parcel" : {
-        "required" : [ "receipient", "sender", "weight" ],
+        "required" : [ "recipient", "sender", "weight" ],
         "type" : "object",
         "properties" : {
           "weight" : {
             "type" : "number",
             "format" : "float"
           },
-          "receipient" : {
-            "$ref" : "#/components/schemas/receipient"
+          "recipient" : {
+            "$ref" : "#/components/schemas/recipient"
           },
           "sender" : {
-            "$ref" : "#/components/schemas/receipient"
+            "$ref" : "#/components/schemas/recipient"
           }
         },
         "example" : {
           "weight" : 5.2,
-          "receipient" : {
+          "recipient" : {
             "name" : "Microsoft",
             "street" : "Am Europlatz 3",
             "postalCode" : "A-1120",
@@ -522,7 +390,7 @@
           }
         }
       },
-      "receipient" : {
+      "recipient" : {
         "required" : [ "city", "country", "name", "postalCode", "street" ],
         "type" : "object",
         "properties" : {
@@ -749,50 +617,6 @@
             "format" : "double"
           }
         }
-      },
-      "webhookResponse" : {
-        "type" : "object",
-        "properties" : {
-          "id" : {
-            "type" : "integer",
-            "format" : "int64"
-          },
-          "trackingId" : {
-            "pattern" : "^[A-Z0-9]{9}$",
-            "type" : "string"
-          },
-          "url" : {
-            "type" : "string"
-          },
-          "created_at" : {
-            "type" : "string",
-            "format" : "date-time"
-          }
-        },
-        "example" : {
-          "created_at" : "2000-01-23T04:56:07.000+00:00",
-          "id" : 0,
-          "url" : "url",
-          "trackingId" : "trackingId"
-        }
-      },
-      "webhookResponses" : {
-        "type" : "array",
-        "items" : {
-          "$ref" : "#/components/schemas/webhookResponse"
-        }
-      },
-      "webhookMessage" : {
-        "allOf" : [ {
-          "$ref" : "#/components/schemas/trackingInformation"
-        }, {
-          "properties" : {
-            "trackingId" : {
-              "pattern" : "^[A-Z0-9]{9}$",
-              "type" : "string"
-            }
-          }
-        } ]
       },
       "warehouse_nextHops" : {
         "required" : [ "hop", "traveltimeMins" ],
